--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@vue/web-component-wrapper": "^1.2.0",
     "auth0-js": "^9.7.3",
+    "auto-bind": "^1.2.1",
     "flow-bin": "^0.80.0",
     "global": "^4.3.2",
+    "srcdoc-polyfill": "^1.0.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
